fix aligning part1

--- a/src/components/table/Table2.pcss
+++ b/src/components/table/Table2.pcss
@@ -10,6 +10,7 @@
   background-color: white;
   width: max-content;
   height: max-content;
+  border-collapse: collapse;
 }
 
 .company {
@@ -29,22 +30,78 @@
   height: 44px;
 }
 
-.tr .transcriptWrapper {
+.td {
+  padding: 0 5px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  /* border-collapse:collapse */
+}
+
+.cell {
   position: relative;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+
+  & .is__number {
+    width: 100%;
+    text-align: end;
+  }
 
   & .transcript {
     position: absolute;
-    top: 0;
     left: 0;
     visibility: hidden;
-    transition: 0.6s 0.6s;
+    /* make transition only on hover */
+    /* transition: 0.6s 0.6s; */
+    margin: 0 -0.5em;
+    padding: 0 0.5em;
+    width: max-content;
+    height: 100%;
+    background-color: #fffcdc;
+    box-shadow: inset 0px -1px 0px 0px #fff8b8;
+    z-index: 10;
+    display: inline-flex;
+    align-items: center;
+  }
+
+  & .hint {
+    position: absolute;
+    bottom: 0;
+    /* 20px padding + 50% half of cell   */
+    left: calc(50% - 20px);
+    visibility: hidden;
+    padding: 20px 15px;
+    width: 180px;
+    height: max-content;
+    border: 0;
+    border-radius: 2px;
+    text-align: left;
+    color: #fffefc;
+    background-color: #444444;
+    box-shadow: none;
+    transform: translateY(100%);
+
+    &::before {
+      position: absolute;
+      z-index: 10;
+      top: -20px;
+      box-sizing: border-box;
+      width: 10px;
+      height: 10px;
+      border: 10px solid transparent;
+      border-bottom: 10px solid #444444;
+      content: "";
+    }
   }
 
   &:hover {
-    & .transcript {
+    /* this z-index made for hint be upper than enother cells */
+    z-index: 20;
+    & .transcript,
+    & .hint {
       visibility: visible;
+      transition: 0.6s 0.6s;
     }
   }
 }
